# routes/userRouter.js
@@ -6,8 +6,8 @@ const UserController = require("../controller/userController");
 
 const userController = new UserController();
 
-userRouter.post("/registro", userController.registerUser);
+userRouter.post("/create", userController.registerUser);
 userRouter.post("/login", userController.loginUser);
-userRouter.get("/userById/:id", userController.getUserById);
+userRouter.get("/:id", userController.getUserById);
 
 module.exports = userRouter;
